reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__knowledge_context.rs_line_1099_col_9_001.log

*** crates/tracewake-core/src/epistemics/knowledge_context.rs:1099:9: replace KnowledgeContext::actor_known_food_sources -> &[ActorKnownFoodSourceFact] with Vec::leak(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/epistemics/knowledge_context.rs
+++ replace KnowledgeContext::actor_known_food_sources -> &[ActorKnownFoodSourceFact] with Vec::leak(vec![Default::default()])
@@ -1091,17 +1091,17 @@
         &self.actor_known_current_places
     }
 
     pub fn actor_known_carried_items(&self) -> &[ActorKnownCarriedItemFact] {
         &self.actor_known_carried_items
     }
 
     pub fn actor_known_food_sources(&self) -> &[ActorKnownFoodSourceFact] {
-        &self.actor_known_food_sources
+        Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn actor_known_sleep_affordances(&self) -> &[ActorKnownSleepAffordanceFact] {
         &self.actor_known_sleep_affordances
     }
 
     pub fn actor_known_routes(&self) -> &[ActorKnownRouteFact] {
         &self.actor_known_routes


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/knowledge_context.rs` has changed (1781909087.643924009s, 6s after last build at 1781909081.627924141s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ActorKnownFoodSourceFact: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1099:24
     |
1099 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     |                        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `ActorKnownFoodSourceFact`
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:326:1
     |
 326 | pub struct ActorKnownFoodSourceFact {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `knowledge_context::ActorKnownFoodSourceFact: Default` is not satisfied
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:1099:24
     |
1099 |         Vec::leak(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
     |                        ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `knowledge_context::ActorKnownFoodSourceFact`
    --> crates/tracewake-core/src/epistemics/knowledge_context.rs:326:1
     |
 326 | pub struct ActorKnownFoodSourceFact {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
